--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
  
   <!--CSS 연결 -->
+  <link rel="stylesheet" href="./css/common.css" />
   <link rel="stylesheet" href="./css/main.css" />
   <!--Lodash scroll 제어-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -45,8 +46,8 @@
   <!-- JAVA 유튜브 연결 -->
   <script defer src="./js/youtube.js"></script>
 
-
   <!-- JAVA 연결 -->
+  <script defer src="./js/common.js"></script>
   <script defer src="./js/main.js"></script>
 </head>
 <body>
